--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
-    <header class="max-w-[1170px] mx-auto my-5 px-5 lg:my-[50px]">
+    <header class="max-w-[1170px] mx-auto my-5 px-5 lg:my-[50px] mt-5">
       <nav
         class="header-navbar-container flex justify-between lg:max-w-[1170px] my-0 mx-auto sm:w-full"
       >
-        <div class="left-site-header">
+        <div class="left-site-header mx-auto mt-[20px ]">
           <img class="w-[150px]" src="images/logo2.png" alt="" />
         </div>
         <div class="middle-of-header hidden sm:flex">
@@ -52,7 +52,7 @@
         </div>
         <div>
           <button
-            class="px-[15px] py-[10px] lg:font-[semibold] text-white text-[1.1rem] lg:py-[18px] lg:px-[29px] bg-[rgba(182,140,90,1)] rounded-lg"
+            class="hidden px-[15px] py-[10px] lg:font-[semibold] text-white text-[1.1rem] lg:py-[18px] lg:px-[29px] bg-[rgba(182,140,90,1)] rounded-lg"
           >
             Free Consultation
           </button>
@@ -61,7 +61,7 @@
     </header>
     <main class="main xl:max-w-[1170px] my-0 mx-auto bg-center px-[5px]">
       <section
-        class="legal-solutions-section bg-[url('images/banner.png')] w-full h-[300px] sm:h-[400px] lg:h-[550px] flex flex-col justify-center items-center bg-center bg-cover lg:bg-cover bg-no-repeat mt-[60px]"
+        class="legal-solutions-section bg-[url('images/banner.png')] w-full h-[300px] sm:h-[400px] lg:h-[550px] flex flex-col justify-center items-center bg-center bg-cover lg:bg-cover bg-no-repeat mt-[30px]"
       >
         <div
           class="legal-solutions-section-container bg-[url('images/Rectangle-5.png')] w-full h-[300px] bg-cover bg-center flex flex-col justify-center items-center lg:py-[104px] lg:px-[239px] sm:py-[50px] sm:px-[239px]"
@@ -78,14 +78,14 @@
             the majority have suffered alteration in some form, by injected
             humour.
           </p>
-          <div class="flex gap-6">
+          <div class="flex justify-center gap-6 w-full mx-auto mt-[20px]">
             <input
-              class="w-[200px] lg:w-[500px] lg:h-16 bg-[rgba(255,255,255,1)] text-[1rem] text-[rgba(160,160,160,1)] rounded-lg pl-5"
+              class="lg:w-[500px] pl-3 lg:h-16 bg-[rgba(255,255,255,1)] text-[1rem] text-[rgba(160,160,160,1)] rounded-lg lg:pl-5"
               type="text"
               placeholder="Search Your Service"
             />
             <button
-              class="bg-[rgba(182,140,90,1)] text-[1.2rem] font-semibold rounded-lg py-4 px-[39px] text-white"
+              class="bg-[rgba(182,140,90,1)] text-[1.2rem] font-semibold rounded-lg py-4 px-[17px] lg:px-[39px] text-white"
             >
               Search
             </button>
@@ -380,7 +380,7 @@
       </section>
 
       <section
-        class="flex flex-col justify-center items-center mt-[50px] lg:mt-[120px] lg:mb-[120px]"
+        class="flex flex-col justify-center items-center mt-[50px] lg:mt-[120px] lg:mb-[120px] w-full"
       >
         <div
           class="contact-with-us-header-description max-w-[680px] flex flex-col justify-center items-center"
@@ -399,7 +399,9 @@
           </p>
         </div>
 
-        <div class="contact-us-card-section flex gap-[30px] flex-col">
+        <div
+          class="contact-us-card-section flex gap-[30px] flex-col w-full px-1"
+        >
           <div
             class="contact-us-card-container lg:w-[569px] grid grid-cols-1 gap-[5px]"
           >
@@ -465,33 +467,33 @@
             </div>
           </div>
 
-          <div class="flex flex-col gap-[30px]">
+          <div class="flex flex-col gap-[30px] w-[100%]">
             <input
-              class="w-[400px] lg:w-[570px] p-[23px] text-[gba(112,112,112,1)] bg-[rgba(243,243,243,1)] rounded-lg"
+              class="w-full lg:w-[570px] p-[23px] text-[gba(112,112,112,1)] bg-[rgba(243,243,243,1)] rounded-lg"
               type="text"
               placeholder="Your Name"
             />
             <input
-              class="w-[400px] lg:w-[570px] p-[23px] text-[gba(112,112,112,1)] bg-[rgba(243,243,243,1)] rounded-lg"
+              class="lg:w-[570px] p-[23px] text-[gba(112,112,112,1)] bg-[rgba(243,243,243,1)] rounded-lg"
               type="email"
               name="email"
               id="email"
               placeholder="Your Email"
             />
             <input
-              class="w-[400px] lg:w-[570px] p-[23px] text-[gba(112,112,112,1)] bg-[rgba(243,243,243,1)] rounded-lg"
+              class="lg:w-[570px] p-[23px] text-[gba(112,112,112,1)] bg-[rgba(243,243,243,1)] rounded-lg"
               type="text"
               placeholder="Subject"
             />
             <textarea
-              class="w-[400px] lg:w-[570px] p-[23px] text-[gba(112,112,112,1)] bg-[rgba(243,243,243,1)] rounded-lg"
+              class="lg:w-[570px] p-[23px] text-[gba(112,112,112,1)] bg-[rgba(243,243,243,1)] rounded-lg"
               rows="5"
               name="Your Message"
               id=""
               placeholder="Your Message"
             ></textarea>
             <button
-              class="font-extrabold text-white text-[20px] w-[400px] lg:w-[570px] py-5 bg-[rgba(182,140,90,1)] flex justify-center items-center rounded-lg"
+              class="font-extrabold text-white text-[20px] lg:w-[570px] py-5 bg-[rgba(182,140,90,1)] flex justify-center items-center rounded-lg"
             >
               Send Message
             </button>
@@ -500,7 +502,7 @@
       </section>
     </main>
     <footer
-      class="bg-[rgba(17,17,17,1)] flex flex-col lg:justify-center items-top py-[120px] lg:gap-[81px] px-3 mt-30"
+      class="bg-[rgba(17,17,17,1)] flex flex-col lg:justify-center items-top py-[50px] lg:py-[120px] lg:gap-[81px] px-3 mt-30"
     >
       <div class="flex flex-col justify-center items-center mb-8">
         <img class="mb-5 lg:mb-[47px]" src="images/logo.png" alt="" />
@@ -536,7 +538,7 @@
         >
           Contact Now
         </h3>
-        <p class="lg:w-[216px] mb-2 lg:mb-4">
+        <p class="lg:w-[216px] mb-2 lg:mb-4 text-center">
           555 4th 5t NW, Washington DC 20530, United States
         </p>
         <p class="inline-block">+88 01750 000 000</p>
